# gst-srtp

./: .gitignore  configure.ac
ext/: Makefile.am
ext/srtp/: Makefile.am  gstsrtp-marshal.list  gstsrtpsend.c
gst/srtp/: .gitignore  Makefile.am  gstsrtp-marshal.c  gstsrtp-marshal.h  gstsrtp-marshal.list  gstsrtp.c  gstsrtprecv.c  gstsrtprecv.h  gstsrtpsend.c  gstsrtpsend.h
gst/srtp/libsrtp/: Makefile.am  Makefile.in  configure.in
gst/srtp/libsrtp/crypto/kernel/: key.c
gst/srtp/libsrtp/crypto/test/: aes_calc  cipher_driver  datatypes_driver  kernel_driver  rand_gen  sha1_driver  stat_driver
gst/srtp/libsrtp/srtp/: srtp.c
gst/srtp/libsrtp/test/: dtls_srtp_driver  rdbx_driver  replay_driver  roc_driver  rtpw  srtp_driver
tests/: Makefile.am
tests/examples/: Makefile.am
tests/examples/srtp/: Makefile.am  client-srtp.c  client-srtp.sh  server-srtp.c  server-srtp.sh
win32/common/: config.h
